// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in a closed sale renders bid when an auction is about to open, but not closed or finished 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <View
    className="css-lyoc09"
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    <Text
      className="css-1iizi73 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      $200
       
    </Text>
    <Text
      className="css-1e758l9 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Regular"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      (ends in 6d)
    </Text>
  </View>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 14,
            "height": 18,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 14,
              "height": 18,
              "lineHeight": 18,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
</View>
`;

exports[`in a closed sale renders without any price information 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <View
    className="css-lyoc09"
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    <Text
      className="css-1iizi73 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      $200
       
    </Text>
    <Text
      className="css-1e758l9 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Regular"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      (ends in 6d)
    </Text>
  </View>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 14,
            "height": 18,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 14,
              "height": 18,
              "lineHeight": 18,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
</View>
`;

exports[`in an open sale renders with current bid 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <View
    className="css-lyoc09"
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    <Text
      className="css-1iizi73 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      $200
       
    </Text>
    <Text
      className="css-1e758l9 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Regular"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      (ends in 6d)
    </Text>
  </View>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 14,
            "height": 18,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 14,
              "height": 18,
              "lineHeight": 18,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
</View>
`;

exports[`in an open sale renders with starting bid 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <View
    className="css-lyoc09"
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    <Text
      className="css-1iizi73 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
       
    </Text>
    <Text
      className="css-1e758l9 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Regular"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      (ends in 6d)
    </Text>
  </View>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 14,
            "height": 18,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 14,
              "height": 18,
              "lineHeight": 18,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
</View>
`;

exports[`renders properly 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 6,
              "paddingRight": 5,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          className="css-1wui850 sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Medium"
          fontSize="10px"
          lineHeight="14px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
                "lineHeight": 14,
              },
              Object {
                "paddingTop": 1,
              },
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <View
    className="css-lyoc09"
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    <Text
      className="css-1iizi73 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    >
      Bidding closed
       
    </Text>
    <Text
      className="css-1e758l9 sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Regular"
      fontSize="12px"
      lineHeight="16px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
        ]
      }
    />
  </View>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 14,
            "height": 18,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 14,
              "height": 18,
              "lineHeight": 18,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 14,
          "height": 18,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
</View>
`;
